--- a/package.json
+++ b/package.json
@@ -10,18 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@auth0/auth0-react": "^2.2.4",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/inter": "^5.0.17",
-    "@mui/joy": "^5.0.0-beta.32",
     "@mui/material": "^5.15.15",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "@zeplin/sdk": "^1.19.0",
     "axios": "^1.6.8",
     "axios-rate-limit": "^1.3.0",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
     "file-saver": "^2.0.5",
     "json-2-csv": "^5.5.1",
     "prop-types": "^15.8.1",
@@ -40,7 +37,6 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0",
-    "vite-express": "^0.16.0"
+    "vite": "^5.2.0"
   }
 }
