--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "dotenv": "^16.4.5",
     "file-saver": "^2.0.5",
     "json-2-csv": "^5.5.1",
+    "jszip": "^3.10.1",
+    "p-limit": "^5.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,6 +39,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-environment": "^1.1.3"
   }
 }
